# ppt-lint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Context.md  MANIFESTO.md  Makefile  PRD_TEMPLATE.md  README.md  docs-impl-guide.md  pyproject.toml  rules.yaml
cli/: __init__.py  ppt_lint.py
docs/plan/: ROADMAP.md
docs/requirements/: PRD.md
internal/: __init__.py
internal/domain/: __init__.py  interfaces.py  models.py  rules.py
internal/infrastructure/: __init__.py  ai_cache.py  compiler.py  engine.py  pptx_adapter.py  reporter.py  role_classifier.py
issues/: PER-63.md  PER-67.md
scripts/: create_test_pptx.py
tests/: test_adapter.py  test_engine.py  test_models.py  test_rules.py
tests/fixtures/: bad.pptx  good.pptx
